--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -25,111 +25,118 @@
                 <div class="TextMask"><div class="text">M E N U</div></div>
             </div>
             
-            <main class="container" id="js-container">
-                <div class="levels" id="lev1">
-                    <p>Leve1</p>
-                    <ul>
-                        <li>
-                            <div class="temp">
-                                <div id="st1-1" class="stNumber my-contact-btn my-btn-animation">Stage_1_1</div>
-                                <div class="stage" id="stage_1">
-                                    <a href="stages\1\index.html"></a>
-                                    <div class="thumbnail" id="thum1"></div>
-                                    <p>title 1</p>
+            <main class="container" id="container">
+                <div class="container" id="leftContainer">
+                    <div class="levels" id="lev1">
+                        <p>Leve1</p>
+                        <ul>
+                            <li>
+                                <div class="temp">
+                                    <div id="st1-1" class="stNumber my-contact-btn my-btn-animation">Stage_1_1</div>
+                                    <div class="stage" id="stage_1">
+                                        <a href="stages\1\index.html"></a>
+                                        <div class="thumbnail" id="thum1"></div>
+                                        <h1>title 1</h1>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="temp">
-                                <div id="st1-2" class="stNumber my-contact-btn my-btn-animation">Stage_1_2</div>
-                                <div class="stage" id="stage_2">
-                                    <a href="stages\2\index.html"></a>
-                                    <div class="thumbnail" id="thum2"></div>
-                                    <p>title 2</p>
+                            </li>
+                            <li>
+                                <div class="temp">
+                                    <div id="st1-2" class="stNumber my-contact-btn my-btn-animation">Stage_1_2</div>
+                                    <div class="stage" id="stage_2">
+                                        <a href="stages\2\index.html"></a>
+                                        <div class="thumbnail" id="thum2"></div>
+                                        <h1>title 2</h1>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="temp">
-                                <div id="st1-3" class="stNumber my-contact-btn my-btn-animation">Stage_1_3</div>
-                                <div class="stage" id="stage_3">
-                                    <a href="stages\3\index.html"></a>
-                                    <div class="thumbnail" id="thum3"></div>
-                                    <p>title 3</p>
+                            </li>
+                            <li>
+                                <div class="temp">
+                                    <div id="st1-3" class="stNumber my-contact-btn my-btn-animation">Stage_1_3</div>
+                                    <div class="stage" id="stage_3">
+                                        <a href="stages\3\index.html"></a>
+                                        <div class="thumbnail" id="thum3"></div>
+                                        <h1>title 3</h1>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="levels" id="lev2">
+                        <p>Leve2</p>
+                        <ul>
+                            <li>
+                                <div class="temp">
+                                    <div id="st2-1" class="stNumber my-contact-btn my-btn-animation">Stage_2_1</div>
+                                    <div class="stage" id="stage_4">
+                                        <a href="stages\4\index.html"></a>
+                                        <div class="thumbnail" id="thum4"></div>
+                                        <h1>title 4</h1>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="temp">
+                                    <div id="st2-2" class="stNumber my-contact-btn my-btn-animation">Stage_2_2</div>
+                                    <div class="stage" id="stage_5">
+                                        <a href="stages\5\index.html"></a>
+                                        <div class="thumbnail" id="thum5"></div>
+                                        <h1>title 5</h1>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="temp">
+                                    <div id="st2-3" class="stNumber my-contact-btn my-btn-animation">Stage_2_3</div>
+                                    <div class="stage" id="stage_6">
+                                        <a href="stages\6\index.html"></a>
+                                        <div class="thumbnail" id="thum6"></div>
+                                        <h1>title 6</h1>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="levels" id="lev3">
+                        <p>Leve3</p>
+                        <ul>
+                            <li>
+                                <div class="temp">
+                                    <div id="st3-1" class="stNumber my-contact-btn my-btn-animation">Stage_3_1</div>
+                                    <div class="stage" id="stage_7">
+                                        <a href="stages\7\index.html"></a>
+                                        <div class="thumbnail" id="thum7"></div>
+                                        <h1>title 7</h1>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="temp">
+                                    <div id="st3-2" class="stNumber my-contact-btn my-btn-animation">Stage_3_2</div>
+                                    <div class="stage" id="stage_8">
+                                        <a href="stages\8\index.html"></a>
+                                        <div class="thumbnail" id="thum8"></div>
+                                        <h1>title 8</h1>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="temp">
+                                    <div id="st3-3" class="stNumber my-contact-btn my-btn-animation">Stage_3_3</div>
+                                    <div class="stage" id="stage_9">
+                                        <a href="stages\9\index.html"></a>
+                                        <div class="thumbnail" id="thum9"></div>
+                                        <h1>title 9</h1>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="levels" id="lev2">
-                    <p>Leve2</p>
-                    <ul>
-                        <li>
-                            <div class="temp">
-                                <div id="st2-1" class="stNumber my-contact-btn my-btn-animation">Stage_2_1</div>
-                                <div class="stage" id="stage_4">
-                                    <a href="stages\4\index.html"></a>
-                                    <div class="thumbnail" id="thum4"></div>
-                                    <p>title 4</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="temp">
-                                <div id="st2-2" class="stNumber my-contact-btn my-btn-animation">Stage_2_2</div>
-                                <div class="stage" id="stage_5">
-                                    <a href="stages\5\index.html"></a>
-                                    <div class="thumbnail" id="thum5"></div>
-                                    <p>title 5</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="temp">
-                                <div id="st2-3" class="stNumber my-contact-btn my-btn-animation">Stage_2_3</div>
-                                <div class="stage" id="stage_6">
-                                    <a href="stages\6\index.html"></a>
-                                    <div class="thumbnail" id="thum6"></div>
-                                    <p>title 6</p>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="levels" id="lev3">
-                    <p>Leve3</p>
-                    <ul>
-                        <li>
-                            <div class="temp">
-                                <div id="st3-1" class="stNumber my-contact-btn my-btn-animation">Stage_3_1</div>
-                                <div class="stage" id="stage_7">
-                                    <a href="stages\7\index.html"></a>
-                                    <div class="thumbnail" id="thum7"></div>
-                                    <p>title 7</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="temp">
-                                <div id="st3-2" class="stNumber my-contact-btn my-btn-animation">Stage_3_2</div>
-                                <div class="stage" id="stage_8">
-                                    <a href="stages\8\index.html"></a>
-                                    <div class="thumbnail" id="thum8"></div>
-                                    <p>title 8</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="temp">
-                                <div id="st3-3" class="stNumber my-contact-btn my-btn-animation">Stage_3_3</div>
-                                <div class="stage" id="stage_9">
-                                    <a href="stages\9\index.html"></a>
-                                    <div class="thumbnail" id="thum9"></div>
-                                    <p>title 9</p>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+            </div>
+            <div class="container" id="rightContainer">
+                <div id="preview">
+                    <img src="" alt="">
                 </div>
             </div>
         </form>
