--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -35,7 +35,9 @@
                                     <div id="st1-1" class="stNumber my-contact-btn my-btn-animation">Stage_1_1</div>
                                     <div class="stage" id="stage_1">
                                         <a href="stages\1\index.html"></a>
-                                        <div class="thumbnail" id="thum1"></div>
+                                        <div class="thumbnail" id="thum1">
+                                            <img src="../images/stage_thumbnail/1.jpg" alt="">
+                                        </div>
                                         <h1>title 1</h1>
                                     </div>
                                 </div>
@@ -45,7 +47,9 @@
                                     <div id="st1-2" class="stNumber my-contact-btn my-btn-animation">Stage_1_2</div>
                                     <div class="stage" id="stage_2">
                                         <a href="stages\2\index.html"></a>
-                                        <div class="thumbnail" id="thum2"></div>
+                                        <div class="thumbnail" id="thum2">
+                                            <img src="../images/stage_thumbnail/2.jpg" alt="">
+                                        </div>
                                         <h1>title 2</h1>
                                     </div>
                                 </div>
@@ -55,7 +59,9 @@
                                     <div id="st1-3" class="stNumber my-contact-btn my-btn-animation">Stage_1_3</div>
                                     <div class="stage" id="stage_3">
                                         <a href="stages\3\index.html"></a>
-                                        <div class="thumbnail" id="thum3"></div>
+                                        <div class="thumbnail" id="thum3">
+                                            <img src="../images/stage_thumbnail/3.jpg" alt="">
+                                        </div>
                                         <h1>title 3</h1>
                                     </div>
                                 </div>
@@ -70,7 +76,9 @@
                                     <div id="st2-1" class="stNumber my-contact-btn my-btn-animation">Stage_2_1</div>
                                     <div class="stage" id="stage_4">
                                         <a href="stages\4\index.html"></a>
-                                        <div class="thumbnail" id="thum4"></div>
+                                        <div class="thumbnail" id="thum4">
+                                            <img src="../images/stage_thumbnail/4.jpg" alt="">
+                                        </div>
                                         <h1>title 4</h1>
                                     </div>
                                 </div>
@@ -80,7 +88,9 @@
                                     <div id="st2-2" class="stNumber my-contact-btn my-btn-animation">Stage_2_2</div>
                                     <div class="stage" id="stage_5">
                                         <a href="stages\5\index.html"></a>
-                                        <div class="thumbnail" id="thum5"></div>
+                                        <div class="thumbnail" id="thum5">
+                                            <img src="../images/stage_thumbnail/5.jpg" alt="">
+                                        </div>
                                         <h1>title 5</h1>
                                     </div>
                                 </div>
@@ -90,7 +100,9 @@
                                     <div id="st2-3" class="stNumber my-contact-btn my-btn-animation">Stage_2_3</div>
                                     <div class="stage" id="stage_6">
                                         <a href="stages\6\index.html"></a>
-                                        <div class="thumbnail" id="thum6"></div>
+                                        <div class="thumbnail" id="thum6">
+                                            <img src="../images/stage_thumbnail/6.jpg" alt="">
+                                        </div>
                                         <h1>title 6</h1>
                                     </div>
                                 </div>
@@ -105,7 +117,9 @@
                                     <div id="st3-1" class="stNumber my-contact-btn my-btn-animation">Stage_3_1</div>
                                     <div class="stage" id="stage_7">
                                         <a href="stages\7\index.html"></a>
-                                        <div class="thumbnail" id="thum7"></div>
+                                        <div class="thumbnail" id="thum7">
+                                            <img src="../images/stage_thumbnail/7.jpg" alt="">
+                                        </div>
                                         <h1>title 7</h1>
                                     </div>
                                 </div>
@@ -115,7 +129,9 @@
                                     <div id="st3-2" class="stNumber my-contact-btn my-btn-animation">Stage_3_2</div>
                                     <div class="stage" id="stage_8">
                                         <a href="stages\8\index.html"></a>
-                                        <div class="thumbnail" id="thum8"></div>
+                                        <div class="thumbnail" id="thum8">
+                                            <img src="../images/stage_thumbnail/8.jpg" alt="">
+                                        </div>
                                         <h1>title 8</h1>
                                     </div>
                                 </div>
@@ -125,7 +141,9 @@
                                     <div id="st3-3" class="stNumber my-contact-btn my-btn-animation">Stage_3_3</div>
                                     <div class="stage" id="stage_9">
                                         <a href="stages\9\index.html"></a>
-                                        <div class="thumbnail" id="thum9"></div>
+                                        <div class="thumbnail" id="thum9">
+                                            <img src="../images/stage_thumbnail/9.jpg" alt="">
+                                        </div>
                                         <h1>title 9</h1>
                                     </div>
                                 </div>
