--- a/gamepage/stages/2/index.html
+++ b/gamepage/stages/2/index.html
@@ -9,22 +9,20 @@
         <script src="script.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
-    <body>
-        <!-- <div class="hamburger_items" id="js-items">
-            <ul>
-                <li><a href="">メニュー1</a></li>
-                <li>メニュー2</li>
-                <li>メニュー3</li>
-            </ul>
+    <body onload="onload();">
+        <div class="pageback_button" id="js-pageback">
+            <a href="../../index.html"></a>
+            <span></span>
+            <span class="arrow"></span>
+            <div class="TextMask"><div class="text">B A C K</div></div>
         </div>
-        <div class="hamburger_button" id="js-hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-            <div class="TextMask"><div class="text">M E N U</div></div>
-        </div>
-        <div class="content">
-            <div class="stage" id="stage_1" href="stages/1/index.html"></div>
-        </div> -->
+        <main>
+            <div id="symbol">
+                <dvi id="shader" class="symbolItem"></dvi>
+                <div id="object" class="symbolItem"></div>
+                <div id="semicircle-left" class="symbolItem"></div>
+                <div id="circle" class="symbolItem"></div>
+            </div>
+        </main>
     </body>
 </html>
