--- a/gamepage/stages/3/index.html
+++ b/gamepage/stages/3/index.html
@@ -6,6 +6,9 @@
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
         <title>Device - gamepage</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="../../../images/Device__icon/favicon.ico" sizes="32x32">
+        <link rel="icon" href="../../../images/Device__icon/icon.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="../../../images/Device__icon/apple-touch-icon.png">
         <script src="script.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
