--- a/gamepage/stages/2/index.html
+++ b/gamepage/stages/2/index.html
@@ -10,6 +10,7 @@
         <link rel="icon" href="../../../images/Device__icon/icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="../../../images/Device__icon/apple-touch-icon.png">
         <script src="script.js" defer></script>
+        <script src="../../stages/script_CheckClearIcon.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body onload="onload();">
@@ -25,6 +26,11 @@
                 <div id="object" class="symbolItem"></div>
                 <div id="semicircle-left" class="symbolItem"></div>
                 <div id="circle" class="symbolItem"></div>
+            </div>
+            <div id="clearIcon" class="clear_Icon">
+                <div id="outLine" class="clear_Icon"></div>
+                <div id="rectangle" class="clear_Icon"></div>
+                <div id="rectangle2" class="clear_Icon"></div>
             </div>
         </main>
     </body>
