--- a/gamepage/stages/2/index.html
+++ b/gamepage/stages/2/index.html
@@ -27,6 +27,7 @@
                 <div id="semicircle-left" class="symbolItem"></div>
                 <div id="circle" class="symbolItem"></div>
             </div>
+            <canvas id="particleCanvas"></canvas>
             <div id="clearIcon" class="clear_Icon">
                 <div id="outLine" class="clear_Icon"></div>
                 <div id="rectangle" class="clear_Icon"></div>
