--- a/index.html
+++ b/index.html
@@ -66,20 +66,29 @@
                     </div>
                     <div class="kakapo"><img src="images/home/kakapo.gif" alt="" width="120px"></div>
                     <div class="prompt">
-                        <button type="button" class="upload_button" onclick="UploadSaveData()">
+                        <button type="button" class="upload_button" onclick="uploadSaveData()">
                             <p>セーブデータをアップロード．．．</p>
                             <img src="images/home/upload.png">
                         </button>
                         <div class="newUserBox">
                             <p>新しくセーブデータを作成する．．．</p>
-                            <input type="text" name="userName" id="newName" placeholder="ユーザー名（10文字以内）" autocomplete="off"><br>
-                            <button type="button" class="done_button" onclick="DoneNewName()">
+                            <input type="text" name="userName" id="newName" placeholder="ユーザー名（10文字以内）" autocomplete="off""><br>
+                            <button type="button" class="done_button" onclick="doneNewName()">
                                 <p>決定→</p>
                             </button>
                         </div>
                     </div>
                 </div>
-            </main>
-        </form>
+            </div>
+        </main>
+    </form>
+    <div id="downloadModal" style=" display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; z-index:9999;">
+        <div style=" background:white; padding:20px; border-radius:10px; text-align:center; max-width:80%;">
+            <p>セーブデータのダウンロード</p>
+            <a id="downloadLink" style="font-size:18px; color:blue;">ここをタップして保存</a>
+            <p>保存方法（例 iPhone）：「共有」→「ファイルに保存」</p>
+            <br><br>
+            <button type="button" onclick="closeDownloadModal()">キャンセル</button>
+        </div>
     </body>
 </html>
