--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </button>
                         <div class="newUserBox">
                             <p>新しくセーブデータを作成する．．．</p>
-                            <input type="text" name="userName" id="newName" placeholder="ユーザー名（10文字以内）" autocomplete="off""><br>
+                            <input type="text" name="userName" id="newName" placeholder="ユーザー名（10文字以内）" autocomplete="off"><br>
                             <button type="button" class="done_button" onclick="doneNewName()">
                                 <p>決定→</p>
                             </button>
@@ -82,12 +82,14 @@
             </div>
         </main>
     </form>
-    <div id="downloadModal" style=" display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; z-index:9999;">
-        <div style=" background:white; padding:20px; border-radius:10px; text-align:center; max-width:80%;">
+    <div id="downloadModal">
+        <div>
             <p>セーブデータのダウンロード</p>
-            <a id="downloadLink" style="font-size:18px; color:blue;">ここをタップして保存</a>
-            <p>保存方法（例 iPhone）：「共有」→「ファイルに保存」</p>
+            <a id="downloadLink" style="color:rgb(55, 73, 94); border-bottom: solid 1px rgb(55, 73, 94); padding-bottom: 3px;">ここをタップして保存</a>
             <br><br>
+            <p>保存方法（例 iPhone）</p>
+            <p>その他… → ファイルに保存</p>
+            <br>
             <button type="button" onclick="closeDownloadModal()">キャンセル</button>
         </div>
     </body>
