--- a/gamepage/stages/1/index.html
+++ b/gamepage/stages/1/index.html
@@ -4,23 +4,35 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
-        <title>Device - gamepage - 1</title>
+        <title>Device - gamepage</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="../../../images/Device__icon/favicon.ico" sizes="32x32">
         <link rel="icon" href="../../../images/Device__icon/icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="../../../images/Device__icon/apple-touch-icon.png">
         <script src="script.js" defer></script>
+        <script src="../../stages/script_CheckClearIcon.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
-    <body>
+    <body onload="onload();">
         <div class="pageback_button" id="js-pageback">
             <a href="../../index.html"></a>
             <span></span>
             <span class="arrow"></span>
             <div class="TextMask"><div class="text">B A C K</div></div>
         </div>
-        <div id="tile">
-            <div id="moveTile"></div>
-        </div>
+        <main>
+            <div id="symbol">
+                <dvi id="shader" class="symbolItem"></dvi>
+                <div id="object" class="symbolItem"></div>
+                <div id="semicircle-left" class="symbolItem"></div>
+                <div id="circle" class="symbolItem"></div>
+            </div>
+            <canvas id="particleCanvas"></canvas>
+            <div id="clearIcon" class="clear_Icon">
+                <div id="outLine" class="clear_Icon"></div>
+                <div id="rectangle" class="clear_Icon"></div>
+                <div id="rectangle2" class="clear_Icon"></div>
+            </div>
+        </main>
     </body>
 </html>
