--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p>保存方法（例 iPhone）</p>
             <p>その他… → ファイルに保存</p>
             <br>
-            <button type="button" onclick="closeDownloadModal()">キャンセル</button>
+            <button type="button" onclick="closeDownloadModal()">完了</button>
         </div>
     </body>
 </html>
