--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -14,21 +14,25 @@
     </head>
     <body>
         <form name="myGameSite">
-            <div class="hamburger_items" id="js-items">
-                <ul>
-                    <li><a href="../index.html">ホーム</a></li>
-                    <li><a href="index.html">ステージ選択</a></li>
-                    <li><a href="../introduction/index.html">紹介</a></li>
-                </ul>
-            </div>
-            <div class="hamburger_button" id="js-hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-                <div class="TextMask"><div class="text">M E N U</div></div>
-            </div>
+            <header>
+                <div class="hamburger_items" id="js-items">
+                    <ul>
+                        <li><a href="../index.html">ホーム</a></li>
+                        <li><a href="index.html">ステージ選択</a></li>
+                        <li><a href="../introduction/index.html">紹介</a></li>
+                    </ul>
+                </div>
+                <div class="hamburger_button" id="js-hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <div class="TextMask"><div class="text">M E N U</div></div>
+                </div>
+
+                <h1 id="header_h1"></h1>
+            </header>
             
-            <main class="container" id="container">
+            <main class="container" id="js-container">
                 <div class="container" id="leftContainer">
                     <div class="levels" id="lev1">
                         <p>Leve1</p>
