--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body oncontextmenu="return false;">
         <div id="dropArea" ontouchstart=""></div>
         <form name="myGameSite">
-            <div class="hamburger_items active" id="js-items">
+            <div class="hamburger_items" id="js-items">
                 <ul>
                     <li><a href="index.html">ホーム</a></li>
                     <li><a href="gamepage/index.html">ステージ選択</a></li>
@@ -25,7 +25,7 @@
                     <button type="button" id="loginButton"  class="stNumber my-contact-btn my-btn-animation" onclick="uploadSaveData()">Log in</button>
                 </div>
             </div>
-            <div class="hamburger_button active" id="js-hamburger">
+            <div class="hamburger_button" id="js-hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -41,7 +41,7 @@
                 <img class="planet" id="planet_5" src="images/Planetary_system/big_4.png" alt="">
                 <img class="planet" id="planet_6" src="images/Planetary_system/ultra_4.png" alt="">
             </div>
-            <main class="container active" id="js-container">
+            <main class="container" id="js-container">
                 <div class="box1 dot"></div>
                 <div class="circle" id="circle1"></div>
                 <div class="circle" id="circle2"></div>
@@ -97,3 +97,4 @@
         </div>
     </body>
 </html>
+
