--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
         <title>Device - home</title>
+
         <link rel="stylesheet" href="style.css">
+
         <link rel="icon" href="images/Device__icon/favicon.ico" sizes="32x32">
         <link rel="icon" href="images/Device__icon/icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="images/Device__icon/apple-touch-icon.png">
+
+        <script src="root.js" defer></script>
         <script src="script.js" defer></script>
+        <script src="script_humburger.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
-    <body oncontextmenu="return false;">
+    <body oncontextmenu="return false;"></body> <!-- 右クリック禁止令 -->
         <div id="dropArea" ontouchstart=""></div>
         <form name="myGameSite">
             <div class="hamburger_items" id="js-items">
@@ -22,6 +27,10 @@
                     <li><a href="introduction/index.html">紹介</a></li>
                 </ul>
                 <div class="temp">
+                    <div id="loginNow">
+                        <p id="nowUserName"></p>
+                        <button type="button" id="logoutButton"  class="stNumber my-contact-btn my-btn-animation" onclick="logout()">Log out</button>
+                    </div>
                     <button type="button" id="loginButton"  class="stNumber my-contact-btn my-btn-animation" onclick="uploadSaveData()">Log in</button>
                 </div>
             </div>
@@ -97,4 +106,3 @@
         </div>
     </body>
 </html>
-
