Update script path for CheckClearIcon.js
12/18
変更点
rootファイル類をフォルダにまとめたから、そのアドレスを再設定した

--- a/gamepage/stages/1/index.html
+++ b/gamepage/stages/1/index.html
@@ -10,7 +10,7 @@
         <link rel="icon" href="../../../images/Device__icon/icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="../../../images/Device__icon/apple-touch-icon.png">
         <script src="script.js" defer></script>
-        <script src="../../stages/script_CheckClearIcon.js"></script>
+        <script src="../script_CheckClearIcon.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body onload="onload();">
