--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="apple-touch-icon" href="images/Device__icon/apple-touch-icon.png">
 
         <script src="root/root.js" defer></script>
-        <script src="root/script.js" defer></script>
+        <script src="script.js" defer></script>
         <script src="root/script_humburger.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
