--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
         <title>Device - gamepage</title>
 
@@ -17,7 +17,7 @@
         <script src="../root/script_humburger.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
-    <body>
+    <body oncontextmenu="return false;">
         <form name="myGameSite">
             <header>
                 <div class="hamburger_items" id="js-items">
