--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
         <title>Device - home</title>
 
@@ -42,7 +42,7 @@
             </div>
             
             <div class="" id="circle5">
-                <div class="planet" id="star"></div>
+                <div class="planet noise" id="star"></div>
                 <img class="planet" id="planet_1" src="images/Planetary_system/small_4.png" alt="">
                 <img class="planet" id="planet_2" src="images/Planetary_system/big_2.png" alt="">
                 <img class="planet" id="planet_3" src="images/Planetary_system/big_3.png" alt="">
@@ -54,6 +54,8 @@
                 <div class="box1 dot"></div>
                 <div class="circle" id="circle1"></div>
                 <div class="circle" id="circle2"></div>
+
+                    
                 <div class="circle" id="circle3"></div>
                 <div class="circle" id="circle4"></div>
                 <div class="line1">
