--- a/gamepage/stages/1/index.html
+++ b/gamepage/stages/1/index.html
@@ -29,9 +29,9 @@
             </div>
             <canvas id="particleCanvas"></canvas>
             <div id="clearIcon" class="clear_Icon">
-                <div id="outLine" class="clear_Icon"></div>
-                <div id="rectangle" class="clear_Icon"></div>
-                <div id="rectangle2" class="clear_Icon"></div>
+                <div id="" class="clear_Icon outLine"></div>
+                <div id="" class="clear_Icon rectangle"></div>
+                <div id="" class="clear_Icon rectangle2"></div>
             </div>
         </main>
     </body>
