--- a/gamepage/stages/1/index.html
+++ b/gamepage/stages/1/index.html
@@ -9,8 +9,10 @@
         <link rel="icon" href="../../../images/Device__icon/favicon.ico" sizes="32x32">
         <link rel="icon" href="../../../images/Device__icon/icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="../../../images/Device__icon/apple-touch-icon.png">
+
+        <script src="../../../root/root.js" defer></script>
         <script src="script.js" defer></script>
-        <script src="../script_CheckClearIcon.js"></script>
+        <script src="../script_CheckClearIcon.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body onload="onload();">
@@ -28,10 +30,10 @@
                 <div id="circle" class="symbolItem"></div>
             </div>
             <canvas id="particleCanvas"></canvas>
-            <div id="clearIcon" class="clear_Icon">
-                <div id="" class="clear_Icon outLine"></div>
-                <div id="" class="clear_Icon rectangle"></div>
-                <div id="" class="clear_Icon rectangle2"></div>
+            <div id="clearIcon" class="area clearIcon">
+                <div id="" class="outline clearIcon"></div>
+                <div id="" class="foundation clearIcon"></div>
+                <div id="checkbox_1_0" class="checkbox clearIcon"></div>
             </div>
         </main>
     </body>
