--- a/gamepage/stages/3/index.html
+++ b/gamepage/stages/3/index.html
@@ -45,20 +45,25 @@
             </div>
 
             <canvas id="particleCanvas"></canvas>
-            <div id="clearIcon" class="clear_Icon morning">
-                <div id="" class="clear_Icon outLine morning"></div>
-                <div id="" class="clear_Icon rectangle morning"></div>
-                <div id="" class="clear_Icon rectangle2 morning"></div>
+            <div id="morning" class="area morning clearIcon">
+                <div id="morningOutline" class="outline morning clearIcon"></div>
+                <div id="" class="foundation morning clearIcon"></div>
+                <div id="checkbox_2_0" class="checkbox morning clearIcon"></div>
             </div>
-            <div id="clearIcon" class="clear_Icon evening">
-                <div id="" class="clear_Icon outLine evening"></div>
-                <div id="" class="clear_Icon rectangle evening"></div>
-                <div id="" class="clear_Icon rectangle2 evening"></div>
+            <div id="noon" class="area noon clearIcon">
+                <div id="noonOutline" class="outline noon clearIcon"></div>
+                <div id="" class="foundation noon clearIcon"></div>
+                <div id="checkbox_2_1" class="checkbox noon clearIcon"></div>
             </div>
-            <div id="clearIcon" class="clear_Icon night">
-                <div id="" class="clear_Icon outLine night"></div>
-                <div id="" class="clear_Icon rectangle night"></div>
-                <div id="" class="clear_Icon rectangle2 night"></div>
+            <div id="evening" class="area evening clearIcon">
+                <div id="eveningOutline" class="outline evening clearIcon"></div>
+                <div id="" class="foundation evening clearIcon"></div>
+                <div id="checkbox_2_2" class="checkbox evening clearIcon"></div>
+            </div>
+            <div id="night" class="area night clearIcon">
+                <div id="nightOutline" class="outline night clearIcon"></div>
+                <div id="" class="foundation night clearIcon"></div>
+                <div id="checkbox_2_3" class="checkbox night clearIcon"></div>
             </div>
         </main>
     </body>
