--- a/gamepage/stages/3/index.html
+++ b/gamepage/stages/3/index.html
@@ -16,7 +16,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body onload="onload();">
-        <div class="pageback_button" id="js-pageback">
+        <div class="pageback_button" id="js-pageback" onclick="pageback()">
             <a href="../../index.html"></a>
             <span></span>
             <span class="arrow"></span>
