--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <p class="gametitle">Device</p><br>
                         <p class="welcome">Welcome</p>
                     </div>
-                    <div class="kakapo"><img src="images/home/kakapo.gif" alt="" width="120px"></div>
+                    <!-- <div class="kakapo"><img src="images/home/kakapo.gif" alt="" width="120px"></div> -->
                     <div class="prompt">
                         <button type="button" class="upload_button" onclick="uploadSaveData()">
                             <p>セーブデータをアップロード．．．</p>
