--- a/gamepage/stages/4/index.html
+++ b/gamepage/stages/4/index.html
@@ -4,30 +4,32 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
-        <title>Device - gamepage</title>
+        <title>Device - stage4</title>
         <link rel="stylesheet" href="style.css">
+
         <link rel="icon" href="../../../images/Device__icon/favicon.ico" sizes="32x32">
         <link rel="icon" href="../../../images/Device__icon/icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="../../../images/Device__icon/apple-touch-icon.png">
+
         <script src="script.js" defer></script>
+        <script src="../script_CheckClearIcon.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
-    <body>
-        <!-- <div class="hamburger_items" id="js-items">
-            <ul>
-                <li><a href="">メニュー1</a></li>
-                <li>メニュー2</li>
-                <li>メニュー3</li>
-            </ul>
+    <body onload="onload();">
+        <div class="pageback_button" id="js-pageback">
+            <a href="../../index.html"></a>
+            <span></span>
+            <span class="arrow"></span>
+            <div class="TextMask"><div class="text">B A C K</div></div>
         </div>
-        <div class="hamburger_button" id="js-hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-            <div class="TextMask"><div class="text">M E N U</div></div>
-        </div>
-        <div class="content">
-            <div class="stage" id="stage_1" href="stages/1/index.html"></div>
-        </div> -->
+        <main>
+            <canvas id="particleCanvas"></canvas>
+            <div id="clearIcon" class="area clearIcon">
+                <div id="" class="outline clearIcon"></div>
+                <div id="" class="foundation clearIcon"></div>
+                <div id="checkbox_4_0" class="checkbox clearIcon"></div>
+            </div>
+        </main>
+        <script src="../../../root/root.js"></script>
     </body>
 </html>
