--- a/gamepage/stages/4/index.html
+++ b/gamepage/stages/4/index.html
@@ -23,6 +23,15 @@
             <div class="TextMask"><div class="text">B A C K</div></div>
         </div>
         <main>
+            <div id="" class="brackets outside top_left"></div>
+            <div id="" class="brackets outside top_right"></div>
+            <div id="" class="brackets outside bottom_right"></div>
+            <div id="" class="brackets outside bottom_left"></div>
+            <div id="printer"></div>
+            <div id="" class="brackets inside top_left"></div>
+            <div id="" class="brackets inside top_right"></div>
+            <div id="" class="brackets inside bottom_right"></div>
+            <div id="" class="brackets inside bottom_left"></div>
             <canvas id="particleCanvas"></canvas>
             <div id="clearIcon" class="area clearIcon">
                 <div id="" class="outline clearIcon"></div>
