--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -56,7 +56,7 @@
                                     <div class="stage" id="stage_1">
                                         <a href="stages\1\index.html"></a>
                                         <div class="thumbnail" id="thum1">
-                                            <img src="../images/stage_thumbnail/1.jpg" alt="">
+                                            <img src="../images/stage_thumbnail/1.png" alt="">
                                         </div>
                                         <h1>title 1</h1>
                                     </div>
@@ -80,7 +80,7 @@
                                     <div class="stage" id="stage_3">
                                         <a href="stages\3\index.html"></a>
                                         <div class="thumbnail" id="thum3">
-                                            <img src="../images/stage_thumbnail/3.jpg" alt="">
+                                            <img src="../images/stage_thumbnail/3.png" alt="">
                                         </div>
                                         <h1>title 3</h1>
                                     </div>
@@ -97,7 +97,7 @@
                                     <div class="stage" id="stage_4">
                                         <a href="stages\4\index.html"></a>
                                         <div class="thumbnail" id="thum4">
-                                            <img src="../images/stage_thumbnail/4.jpg" alt="">
+                                            <img src="../images/stage_thumbnail/4.png" alt="">
                                         </div>
                                         <h1>title 4</h1>
                                     </div>
