--- a/gamepage/stages/5/index.html
+++ b/gamepage/stages/5/index.html
@@ -23,23 +23,41 @@
             <div class="TextMask"><div class="text">B A C K</div></div>
         </div>
         <main>
-            <div id="par">
-                parsent
-                <div id="par_val"></div>
+            <div id="checkbox_5_0" class="checkbox clearIcon">
+                <div id="px_val_5_0"></div>
             </div>
-            <div id="vw">
-                vwvh
-                <div id="vw_val"></div>
+            <div id="checkbox_5_1" class="checkbox clearIcon">
+                <div id="px_val_5_1"></div>
             </div>
-            <div id="px">
-                px
-                <div id="px_val"></div>
+            <div id="checkbox_5_2" class="checkbox clearIcon">
+                <div id="px_val_5_2"></div>
+            </div>
+            <div id="checkbox_5_3" class="checkbox clearIcon">
+                <div id="px_val_5_3"></div>
+            </div>
+            <div id="checkbox_5_4" class="checkbox clearIcon">
+                <div id="px_val_5_4"></div>
             </div>
             <canvas id="particleCanvas"></canvas>
             <div id="clearIcon" class="area clearIcon">
                 <div id="" class="outline clearIcon"></div>
                 <div id="" class="foundation clearIcon"></div>
-                <div id="checkbox_5_0" class="checkbox clearIcon"></div>
+            </div>
+            <div id="clearIcon" class="area clearIcon">
+                <div id="" class="outline clearIcon"></div>
+                <div id="" class="foundation clearIcon"></div>
+            </div>
+            <div id="clearIcon" class="area clearIcon">
+                <div id="" class="outline clearIcon"></div>
+                <div id="" class="foundation clearIcon"></div>
+            </div>
+            <div id="clearIcon" class="area clearIcon">
+                <div id="" class="outline clearIcon"></div>
+                <div id="" class="foundation clearIcon"></div>
+            </div>
+            <div id="clearIcon" class="area clearIcon">
+                <div id="" class="outline clearIcon"></div>
+                <div id="" class="foundation clearIcon"></div>
             </div>
         </main>
         <script src="../../../root/root.js"></script>
