--- a/gamepage/stages/5/index.html
+++ b/gamepage/stages/5/index.html
@@ -23,41 +23,41 @@
             <div class="TextMask"><div class="text">B A C K</div></div>
         </div>
         <main>
-            <div id="checkbox_5_0" class="checkbox clearIcon">
-                <div id="px_val_5_0"></div>
-            </div>
-            <div id="checkbox_5_1" class="checkbox clearIcon">
-                <div id="px_val_5_1"></div>
-            </div>
-            <div id="checkbox_5_2" class="checkbox clearIcon">
-                <div id="px_val_5_2"></div>
-            </div>
-            <div id="checkbox_5_3" class="checkbox clearIcon">
-                <div id="px_val_5_3"></div>
-            </div>
-            <div id="checkbox_5_4" class="checkbox clearIcon">
-                <div id="px_val_5_4"></div>
-            </div>
             <canvas id="particleCanvas"></canvas>
-            <div id="clearIcon" class="area clearIcon">
+            <div id="clearIcon_0" class="area clearIcon">
                 <div id="" class="outline clearIcon"></div>
                 <div id="" class="foundation clearIcon"></div>
+                <div id="checkbox_5_0" class="checkbox clearIcon">
+                    <div id="px_val_5_0"></div>
+                </div>
             </div>
-            <div id="clearIcon" class="area clearIcon">
+            <div id="clearIcon_1" class="area clearIcon">
                 <div id="" class="outline clearIcon"></div>
                 <div id="" class="foundation clearIcon"></div>
+                <div id="checkbox_5_1" class="checkbox clearIcon">
+                    <div id="px_val_5_1"></div>
+                </div>
             </div>
-            <div id="clearIcon" class="area clearIcon">
+            <div id="clearIcon_2" class="area clearIcon">
                 <div id="" class="outline clearIcon"></div>
                 <div id="" class="foundation clearIcon"></div>
+                <div id="checkbox_5_2" class="checkbox clearIcon">
+                    <div id="px_val_5_2"></div>
+                </div>
             </div>
-            <div id="clearIcon" class="area clearIcon">
+            <div id="clearIcon_3" class="area clearIcon">
                 <div id="" class="outline clearIcon"></div>
                 <div id="" class="foundation clearIcon"></div>
+                <div id="checkbox_5_3" class="checkbox clearIcon">
+                    <div id="px_val_5_3"></div>
+                </div>
             </div>
-            <div id="clearIcon" class="area clearIcon">
+            <div id="clearIcon_4" class="area clearIcon">
                 <div id="" class="outline clearIcon"></div>
                 <div id="" class="foundation clearIcon"></div>
+                <div id="checkbox_5_4" class="checkbox clearIcon">
+                    <div id="px_val_5_4"></div>
+                </div>
             </div>
         </main>
         <script src="../../../root/root.js"></script>
