--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -109,7 +109,7 @@
                                     <div class="stage" id="stage_5">
                                         <a href="stages\5\index.html"></a>
                                         <div class="thumbnail" id="thum5">
-                                            <img src="../images/stage_thumbnail/5.jpg" alt="">
+                                            <img src="../images/stage_thumbnail/5.png" alt="">
                                         </div>
                                         <h1>title 5</h1>
                                     </div>
@@ -180,3 +180,4 @@
         </form>
     </body>
 </html>
+
